fixed body scroll while burger visible

--- a/src/Styles/NavBar.css
+++ b/src/Styles/NavBar.css
@@ -91,6 +91,10 @@
         background-color: transparent;
     }
 
+    body.visible {
+        overflow-y: hidden;
+    }
+
     .nav {
         opacity: 0;
         visibility: hidden;
